--- a/src/home.html
+++ b/src/home.html
@@ -1,1 +1,155 @@
-home
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Liquomend | Home</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+      integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/home.css" />
+  </head>
+  <body>
+    <div class="global-container">
+      <header class="header m-3">
+        <button class="mobile-menu__btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </header>
+      <div class="hero">
+        <div class="hero__logo-img">
+          <img src="./img/logo.png" alt="logo image" />
+        </div>
+        <div class="hero__bg-img">
+          <img src="./img/hero.jpg" alt="hero image" />
+        </div>
+      </div>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+        </ul>
+      </nav>
+      <!-- <div class="recommend">
+        <h3 class="recommend__title main-title">Recommend Recipe</h3>
+        <div class="card container">
+          <ul class="card__list">
+            <li class="card__item">
+              <a href="card__link">
+                <img
+                  src="./img/sampleDrink.jpg"
+                  alt="sample drink image"
+                  class="card__img"
+                />
+                <div class="card__description">
+                  <h5 class="card__title">カクテル名</h5>
+                  <p class="card__text">ベースリキュール</p>
+                </div>
+              </a>
+            </li>
+            <li class="card__item">
+              <a href="card__link">
+                <img
+                  src="./img/sampleDrink.jpg"
+                  alt="sample drink image"
+                  class="card__img"
+                />
+                <div class="card__description">
+                  <h5 class="card__title">カクテル名</h5>
+                  <p class="card__text">ベースリキュール</p>
+                </div>
+              </a>
+            </li>
+            <li class="card__item">
+              <a href="card__link">
+                <img
+                  src="./img/sampleDrink.jpg"
+                  alt="sample drink image"
+                  class="card__img"
+                />
+                <div class="card__description">
+                  <h5 class="card__title">カクテル名</h5>
+                  <p class="card__text">ベースリキュール</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="classic">
+        <h3 class="classic__title main-title">定番ドリンク</h3>
+        <div class="card container">
+          <ul class="card__list">
+            <li class="card__item">
+              <a href="card__link">
+                <img
+                  src="./img/sampleDrink.jpg"
+                  alt="sample drink image"
+                  class="card__img"
+                />
+                <div class="card__description">
+                  <h5 class="card__title">カクテル名</h5>
+                  <p class="card__text">ベースリキュール</p>
+                </div>
+              </a>
+            </li>
+            <li class="card__item">
+              <a href="card__link">
+                <img
+                  src="./img/sampleDrink.jpg"
+                  alt="sample drink image"
+                  class="card__img"
+                />
+                <div class="card__description">
+                  <h5 class="card__title">カクテル名</h5>
+                  <p class="card__text">ベースリキュール</p>
+                </div>
+              </a>
+            </li>
+            <li class="card__item">
+              <a href="card__link">
+                <img
+                  src="./img/sampleDrink.jpg"
+                  alt="sample drink image"
+                  class="card__img"
+                />
+                <div class="card__description">
+                  <h5 class="card__title">カクテル名</h5>
+                  <p class="card__text">ベースリキュール</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+          <p class="more-btn">+ MORE</p>
+        </div>
+      </div>
+      <div class="search">
+        <div class="search-inner">
+          <h3 class="search__title main-title">レシピ検索</h3>
+          <form action="#" method="GET" class="search__form">
+            <div class="search__bar">
+              <input type="text" placeholder="検索" class="search__input" />
+              <button type="submit" class="search__btn">
+                <i class="fas fa-search"></i>
+              </button>
+            </div>
+          </form>
+          <p class="search__info">またはカテゴリーから探すこともできます。</p>
+          <div class="search__categories">Categories</div>
+        </div>
+        <div class="search__img">
+          <img src="./img/search-bg.jpg" alt="search bg image" />
+        </div>
+      </div>
+      <footer class="footer">
+        <p class="footer__copyright"><small>&copy;gms.gdl.jp</small></p>
+      </footer> -->
+    </div>
+  </body>
+</html>
