add cocktail sass module for list rendering of drink items

--- a/src/home.html
+++ b/src/home.html
@@ -36,46 +36,33 @@
           <li class="nav__item"><a href="#" class="nav__link">About</a></li>
         </ul>
       </nav>
-      <!-- <div class="recommend">
+      <div class="recommend">
         <h3 class="recommend__title main-title">Recommend Recipe</h3>
-        <div class="card container">
-          <ul class="card__list">
-            <li class="card__item">
-              <a href="card__link">
+        <div class="cocktail container">
+          <ul class="cocktail__list">
+            <li class="cocktail__item">
+              <a href="cocktail__link">
                 <img
                   src="./img/sampleDrink.jpg"
                   alt="sample drink image"
-                  class="card__img"
+                  class="cocktail__img"
                 />
-                <div class="card__description">
-                  <h5 class="card__title">カクテル名</h5>
-                  <p class="card__text">ベースリキュール</p>
+                <div class="cocktail__description">
+                  <h5 class="cocktail__title">カクテル名</h5>
+                  <p class="cocktail__text">ベースリキュール</p>
                 </div>
               </a>
             </li>
-            <li class="card__item">
-              <a href="card__link">
+            <li class="cocktail__item">
+              <a href="cocktail__link">
                 <img
                   src="./img/sampleDrink.jpg"
                   alt="sample drink image"
-                  class="card__img"
+                  class="cocktail__img"
                 />
-                <div class="card__description">
-                  <h5 class="card__title">カクテル名</h5>
-                  <p class="card__text">ベースリキュール</p>
-                </div>
-              </a>
-            </li>
-            <li class="card__item">
-              <a href="card__link">
-                <img
-                  src="./img/sampleDrink.jpg"
-                  alt="sample drink image"
-                  class="card__img"
-                />
-                <div class="card__description">
-                  <h5 class="card__title">カクテル名</h5>
-                  <p class="card__text">ベースリキュール</p>
+                <div class="cocktail__description">
+                  <h5 class="cocktail__title">カクテル名</h5>
+                  <p class="cocktail__text">ベースリキュール</p>
                 </div>
               </a>
             </li>
@@ -84,44 +71,18 @@
       </div>
       <div class="classic">
         <h3 class="classic__title main-title">定番ドリンク</h3>
-        <div class="card container">
-          <ul class="card__list">
-            <li class="card__item">
-              <a href="card__link">
+        <div class="cocktail container">
+          <ul class="cocktail__list">
+            <li class="cocktail__item">
+              <a href="cocktail__link">
                 <img
                   src="./img/sampleDrink.jpg"
                   alt="sample drink image"
-                  class="card__img"
+                  class="cocktail__img"
                 />
-                <div class="card__description">
-                  <h5 class="card__title">カクテル名</h5>
-                  <p class="card__text">ベースリキュール</p>
-                </div>
-              </a>
-            </li>
-            <li class="card__item">
-              <a href="card__link">
-                <img
-                  src="./img/sampleDrink.jpg"
-                  alt="sample drink image"
-                  class="card__img"
-                />
-                <div class="card__description">
-                  <h5 class="card__title">カクテル名</h5>
-                  <p class="card__text">ベースリキュール</p>
-                </div>
-              </a>
-            </li>
-            <li class="card__item">
-              <a href="card__link">
-                <img
-                  src="./img/sampleDrink.jpg"
-                  alt="sample drink image"
-                  class="card__img"
-                />
-                <div class="card__description">
-                  <h5 class="card__title">カクテル名</h5>
-                  <p class="card__text">ベースリキュール</p>
+                <div class="cocktail__description">
+                  <h5 class="cocktail__title">カクテル名</h5>
+                  <p class="cocktail__text">ベースリキュール</p>
                 </div>
               </a>
             </li>
@@ -129,7 +90,7 @@
           <p class="more-btn">+ MORE</p>
         </div>
       </div>
-      <div class="search">
+      <!-- <div class="search">
         <div class="search-inner">
           <h3 class="search__title main-title">レシピ検索</h3>
           <form action="#" method="GET" class="search__form">
@@ -146,8 +107,8 @@
         <div class="search__img">
           <img src="./img/search-bg.jpg" alt="search bg image" />
         </div>
-      </div>
-      <footer class="footer">
+      </div> -->
+      <!-- <footer class="footer">
         <p class="footer__copyright"><small>&copy;gms.gdl.jp</small></p>
       </footer> -->
     </div>
