adjust style using recommend and classic block depending home page and create more-btn

--- a/src/home.html
+++ b/src/home.html
@@ -87,7 +87,9 @@
               </a>
             </li>
           </ul>
-          <p class="more-btn">+ MORE</p>
+          <div class="more-btn">
+            <a href="#">+ MORE</a>
+          </div>
         </div>
       </div>
       <!-- <div class="search">
