--- a/src/home.html
+++ b/src/home.html
@@ -110,9 +110,9 @@
           <img src="./img/search-bg.jpg" alt="search bg image" />
         </div>
       </div>
-      <!-- <footer class="footer">
+      <footer class="footer">
         <p class="footer__copyright"><small>&copy;gms.gdl.jp</small></p>
-      </footer> -->
+      </footer>
     </div>
   </body>
 </html>
