create register page with markup and styleup

--- a/src/home.html
+++ b/src/home.html
@@ -143,9 +143,9 @@
             </a>
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">
-              <span class="nav-main-title">About</span>
-              <span class="nav-sub-title">お問い合わせ</span>
+            <a href="./register.html" class="mobile-menu__link">
+              <span class="nav-main-title">Sign Up</span>
+              <span class="nav-sub-title">新規登録</span>
             </a>
           </li>
         </ul>
