--- a/src/login.html
+++ b/src/login.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Liquomend | Sign Up</title>
-    <link rel="stylesheet" href="./css/register.css" />
+    <title>Liquomend | Login</title>
+    <link rel="stylesheet" href="./css/login.css" />
   </head>
   <body>
     <div id="global-container">
@@ -37,18 +37,10 @@
         </nav>
 
         <div class="container">
-          <div class="register">
-            <h3 class="form__title">Sign Up</h3>
-            <form action="register.php" method="POST" class="form">
-              <label for="username" class="form__label">User Name</label>
-              <input
-                id="username"
-                type="text"
-                name="username"
-                class="form__username mb-2"
-              />
-              <br />
+          <div class="login">
+            <h3 class="form__title">Sign In</h3>
 
+            <form action="login.php" method="POST" class="form">
               <label for="email" class="form__label">Email</label>
               <input
                 id="email"
@@ -63,22 +55,20 @@
                 id="password"
                 type="password"
                 name="password"
-                class="form__password mb-2"
+                class="form__password"
               />
               <br />
 
-              <label for="password_confirm" class="form__label"
-                >パスワード(確認用)</label
-              >
-              <input
-                id="password_confirm"
-                type="password"
-                name="password_confirm"
-                class="form__password mb-4"
-              />
+              <div class="login__unvalid mb-4">
+                <a href='reset-login.php'>パスワードを忘れた場合</a>
+              </div>
               <br />
 
-              <input type="submit" value="新規登録" class="form__btn" />
+              <div class="login__btns">
+                <input type="submit" value="ログイン" class="form__btn" />
+                <p class="login__or__register">または</p>
+                <input type="submit" value="新規登録" class="form__btn" />
+              </div>
             </form>
           </div>
         </div>
@@ -114,9 +104,9 @@
             </a>
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">
-              <span class="nav-main-title">About</span>
-              <span class="nav-sub-title">お問い合わせ</span>
+            <a href="./register.html" class="mobile-menu__link">
+              <span class="nav-main-title">Sign Up</span>
+              <span class="nav-sub-title">新規登録画面へ</span>
             </a>
           </li>
         </ul>
