--- a/src/home.html
+++ b/src/home.html
@@ -109,7 +109,7 @@
             <div class="search__categories">Categories</div>
           </div>
           <div class="search__img">
-            <img src="./img/search-bg.jpg" alt="search bg image" />
+            <img src="./img/bg.jpg" alt="search bg image" />
           </div>
         </div>
         <footer class="footer">
