connect each mobile menu nav to pages

--- a/src/about.html
+++ b/src/about.html
@@ -91,27 +91,27 @@
         </div>
         <ul class="mobile-menu__main">
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">
-              <span class="nav-main-title">About</span>
-              <span class="nav-sub-title">お問い合わせ</span>
+            <a href="./home.html" class="mobile-menu__link">
+              <span class="nav-main-title">Home</span>
+              <span class="nav-sub-title">ホームへ戻る</span>
             </a>
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">
-              <span class="nav-main-title">About</span>
-              <span class="nav-sub-title">お問い合わせ</span>
+            <a href="＃" class="mobile-menu__link">
+              <span class="nav-main-title">ページ</span>
+              <span class="nav-sub-title">なんとかページ</span>
             </a>
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">
-              <span class="nav-main-title">About</span>
-              <span class="nav-sub-title">お問い合わせ</span>
+            <a href="./login.html" class="mobile-menu__link">
+              <span class="nav-main-title">Log In</span>
+              <span class="nav-sub-title">ログイン</span>
             </a>
           </li>
           <li class="mobile-menu__item">
             <a href="./register.html" class="mobile-menu__link">
               <span class="nav-main-title">Sign Up</span>
-              <span class="nav-sub-title">新規登録</span>
+              <span class="nav-sub-title">新規登録画面へ</span>
             </a>
           </li>
         </ul>
