--- a/src/home.html
+++ b/src/home.html
@@ -126,20 +126,20 @@
         <ul class="mobile-menu__main">
           <li class="mobile-menu__item">
             <a href="#" class="mobile-menu__link">
+              <span class="nav-main-title">ページ</span>
+              <span class="nav-sub-title">なんとかページ</span>
+            </a>
+          </li>
+          <li class="mobile-menu__item">
+            <a href="./about.html" class="mobile-menu__link">
               <span class="nav-main-title">About</span>
               <span class="nav-sub-title">お問い合わせ</span>
             </a>
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">
-              <span class="nav-main-title">About</span>
-              <span class="nav-sub-title">お問い合わせ</span>
-            </a>
-          </li>
-          <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">
-              <span class="nav-main-title">About</span>
-              <span class="nav-sub-title">お問い合わせ</span>
+            <a href="./login.html" class="mobile-menu__link">
+              <span class="nav-main-title">Log In</span>
+              <span class="nav-sub-title">ログイン</span>
             </a>
           </li>
           <li class="mobile-menu__item">
