--- a/src/login.html
+++ b/src/login.html
@@ -92,15 +92,15 @@
             </a>
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">
+            <a href="./about.html" class="mobile-menu__link">
               <span class="nav-main-title">About</span>
               <span class="nav-sub-title">お問い合わせ</span>
             </a>
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">
-              <span class="nav-main-title">About</span>
-              <span class="nav-sub-title">お問い合わせ</span>
+            <a href="＃" class="mobile-menu__link">
+              <span class="nav-main-title">ページ</span>
+              <span class="nav-sub-title">なんとかページ</span>
             </a>
           </li>
           <li class="mobile-menu__item">
