--- a/src/search.html
+++ b/src/search.html
@@ -24,8 +24,14 @@
           </button>
         </header>
         <div class="hero">
-          <div class="hero__logo-img">
-            <img src="./img/logo.png" alt="logo image" />
+          <div class="hero__logo">
+            <img src="./img/logo.png" alt="header logo image">
+          </div>
+          <div class="hero__search-word">
+            <p class="hero__search-word__string">ファジーネーブル</p>
+            <div class="hero__search-word__underbar">
+              <img src="./img/category-underbar.png" alt="category bar image">
+            </div>
           </div>
           <div class="hero__bg-img">
             <img src="./img/hero.jpg" alt="hero image" />
