modify footer to keep staying on the bottom of each page, and adjust home page footer

--- a/src/usual-menu.html
+++ b/src/usual-menu.html
@@ -103,6 +103,84 @@
                   </div>
                 </a>
               </li>
+              <li class="cocktail__item">
+                <a href="cocktail__link">
+                  <img
+                    src="./img/sampleDrink.jpg"
+                    alt="sample drink image"
+                    class="cocktail__img"
+                  />
+                  <div class="cocktail__description">
+                    <h5 class="cocktail__title">カクテル名</h5>
+                    <p class="cocktail__text">ベースリキュール</p>
+                  </div>
+                </a>
+              </li>
+              <li class="cocktail__item">
+                <a href="cocktail__link">
+                  <img
+                    src="./img/sampleDrink.jpg"
+                    alt="sample drink image"
+                    class="cocktail__img"
+                  />
+                  <div class="cocktail__description">
+                    <h5 class="cocktail__title">カクテル名</h5>
+                    <p class="cocktail__text">ベースリキュール</p>
+                  </div>
+                </a>
+              </li>
+              <li class="cocktail__item">
+                <a href="cocktail__link">
+                  <img
+                    src="./img/sampleDrink.jpg"
+                    alt="sample drink image"
+                    class="cocktail__img"
+                  />
+                  <div class="cocktail__description">
+                    <h5 class="cocktail__title">カクテル名</h5>
+                    <p class="cocktail__text">ベースリキュール</p>
+                  </div>
+                </a>
+              </li>
+              <li class="cocktail__item">
+                <a href="cocktail__link">
+                  <img
+                    src="./img/sampleDrink.jpg"
+                    alt="sample drink image"
+                    class="cocktail__img"
+                  />
+                  <div class="cocktail__description">
+                    <h5 class="cocktail__title">カクテル名</h5>
+                    <p class="cocktail__text">ベースリキュール</p>
+                  </div>
+                </a>
+              </li>
+              <li class="cocktail__item">
+                <a href="cocktail__link">
+                  <img
+                    src="./img/sampleDrink.jpg"
+                    alt="sample drink image"
+                    class="cocktail__img"
+                  />
+                  <div class="cocktail__description">
+                    <h5 class="cocktail__title">カクテル名</h5>
+                    <p class="cocktail__text">ベースリキュール</p>
+                  </div>
+                </a>
+              </li>
+              <li class="cocktail__item">
+                <a href="cocktail__link">
+                  <img
+                    src="./img/sampleDrink.jpg"
+                    alt="sample drink image"
+                    class="cocktail__img"
+                  />
+                  <div class="cocktail__description">
+                    <h5 class="cocktail__title">カクテル名</h5>
+                    <p class="cocktail__text">ベースリキュール</p>
+                  </div>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
