--- a/src/home.html
+++ b/src/home.html
@@ -90,7 +90,7 @@
               </li>
             </ul>
             <div class="more-btn">
-              <a href="#">+ MORE</a>
+              <a href="./usual-menu.html">+ MORE</a>
             </div>
           </div>
         </div>
