fix extract.js and confirm whether extract function is working, it became totally good!

--- a/src/usual-menu.html
+++ b/src/usual-menu.html
@@ -63,7 +63,7 @@
         <div class="drinks">
           <div class="cocktail container">
             <ul class="cocktail__list">
-              <li class="cocktail__item">
+              <li class="cocktail__item liquor">
                 <a href="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
@@ -71,12 +71,12 @@
                     class="cocktail__img"
                   />
                   <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
+                    <h5 class="cocktail__title">カシスオレンジ</h5>
+                    <p class="cocktail__text">カシスリキュール</p>
                   </div>
                 </a>
               </li>
-              <li class="cocktail__item">
+              <li class="cocktail__item liquor">
                 <a href="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
@@ -84,12 +84,12 @@
                     class="cocktail__img"
                   />
                   <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
+                    <h5 class="cocktail__title">ピーチフィズ</h5>
+                    <p class="cocktail__text">ピーチリキュール</p>
                   </div>
                 </a>
               </li>
-              <li class="cocktail__item">
+              <li class="cocktail__item gin">
                 <a href="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
@@ -97,12 +97,12 @@
                     class="cocktail__img"
                   />
                   <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
+                    <h5 class="cocktail__title">ジンライム</h5>
+                    <p class="cocktail__text">ジンベース</p>
                   </div>
                 </a>
               </li>
-              <li class="cocktail__item">
+              <li class="cocktail__item tequila">
                 <a href="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
@@ -110,12 +110,12 @@
                     class="cocktail__img"
                   />
                   <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
+                    <h5 class="cocktail__title">クエルボゴールド</h5>
+                    <p class="cocktail__text">テキーラベース</p>
                   </div>
                 </a>
               </li>
-              <li class="cocktail__item">
+              <li class="cocktail__item vodka">
                 <a href="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
@@ -123,12 +123,12 @@
                     class="cocktail__img"
                   />
                   <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
+                    <h5 class="cocktail__title">レッドブルウォッカ</h5>
+                    <p class="cocktail__text">ウォッカベース</p>
                   </div>
                 </a>
               </li>
-              <li class="cocktail__item">
+              <li class="cocktail__item rum">
                 <a href="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
@@ -136,12 +136,12 @@
                     class="cocktail__img"
                   />
                   <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
+                    <h5 class="cocktail__title">ラムコーク</h5>
+                    <p class="cocktail__text">ラムベース</p>
                   </div>
                 </a>
               </li>
-              <li class="cocktail__item">
+              <li class="cocktail__item gin">
                 <a href="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
@@ -149,12 +149,12 @@
                     class="cocktail__img"
                   />
                   <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
+                    <h5 class="cocktail__title">ジンライム</h5>
+                    <p class="cocktail__text">ジンベース</p>
                   </div>
                 </a>
               </li>
-              <li class="cocktail__item">
+              <li class="cocktail__item liquor">
                 <a href="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
@@ -162,8 +162,21 @@
                     class="cocktail__img"
                   />
                   <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
+                    <h5 class="cocktail__title">カシスウーロン</h5>
+                    <p class="cocktail__text">カシスリキュール</p>
+                  </div>
+                </a>
+              </li>
+              <li class="cocktail__item other">
+                <a href="cocktail__link">
+                  <img
+                    src="./img/sampleDrink.jpg"
+                    alt="sample drink image"
+                    class="cocktail__img"
+                  />
+                  <div class="cocktail__description">
+                    <h5 class="cocktail__title">ジャスハイ</h5>
+                    <p class="cocktail__text">焼酎ベース</p>
                   </div>
                 </a>
               </li>
