create category page

--- a/src/category.html
+++ b/src/category.html
@@ -37,7 +37,20 @@
         </div>
 
         <div class="category">
-          
+          <ul class="category__list">
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">リキュール</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">ジン</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">ウォッカ</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">ラム</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">テキーラ</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">ウイスキー</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">ビール</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">焼酎</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">ワイン</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">ブランデー</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">日本酒</a></li>
+            <li class="category__base"><a href="./customize-menu.html" class="category__link">その他</a></li>
+          </ul>
         </div>
 
         <footer class="footer">
