apply recipe name style and rename hero-post block to recipe-img

--- a/src/post.html
+++ b/src/post.html
@@ -33,24 +33,22 @@
             <div class="hero__logo">
               <img src="./img/logo.png" alt="header logo image" />
             </div>
-            <label class="hero-post">
-              <div class="hero-post__bg-img">
-                <img src="./img/hero.jpg" alt="hero image" />
+            <label class="recipe-img">
+              <div class="recipe-img__bg-img">
+                <img src="./img/hero.jpg" alt="recipe bg image" />
               </div>
-              <div class="hero-post__circle">
+              <div class="recipe-img__circle">
                 <i class="fas fa-camera"></i>
               </div>
-              <input type="file" name="image" class="hero-post__input" required />
+              <input type="file" name="image" class="recipe-img__input" required />
             </label>
           </div>
 
-          <nav class="nav" style="margin-bottom: 200px;">
-            <ul class="nav__list">
-              <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-            </ul>
-          </nav>
+          <div class="recipe-name" style="margin-bottom: 200px;">
+            <h3 class="recipe-name__title">
+              <input type="text" placeholder="レシピ名" class="recipe-name__input" />
+            </h3>
+          </div>
 
           <div class="search">
             <div class="search-inner">
