implement controlling appearance of select menu and separate as ES module

--- a/src/post.html
+++ b/src/post.html
@@ -51,7 +51,7 @@
                   <div class="form-group">
                     <label class="control-label">ベース</label>
                     <div class="select-wrap select-base">
-                      <select name="" id="">
+                      <select name="base" class="js-base">
                         <option value="">ベース</option>
                         <option class="recipe-info__base" value="liquor">リキュール</option>
                         <option class="recipe-info__base" value="gin">ジン</option>
@@ -70,7 +70,7 @@
                   </div>
                 </div>
               </div>
-              <div class="row recipe-info__display-toggle">
+              <div class="row js-toggle inactive">
                 <div class="col-10 offset-1">
                   <div class="form-group">
                     <label class="control-label">度数</label>
