--- a/src/post.html
+++ b/src/post.html
@@ -118,49 +118,49 @@
           <div class="recipe-method container">
             <h4 class="recipe-method__title main-title">材料・分量</h4>
             <div class="row">
-              <div class="col-12">
-                <div class="form-group">
+              <div class="col-12 js-recipe-method">
+                <div class="form-group js-recipe-method-item" id="1">
                   <div class="input">
                     <label for="ingredient" class="recipe-method__label">材料１</label>
-                    <input type="text" id="ingredient" class="recipe-method__input" />
+                    <input type="text" id="ingredient" name="ingredients[]" class="recipe-method__input" />
                   </div>
                   <div class="input">
                     <label for="quantity" class="recipe-method__label">分量１</label>
-                    <input type="text" id="quantity" class="recipe-method__input" />
+                    <input type="text" id="quantity" name="quantities[]" class="recipe-method__input" />
                   </div>
-                  <div class="recipe-method__delete">
+                  <div class="recipe-method__delete js-delete-btn">
                     <p>削除</p>
                   </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group js-recipe-method-item" id="2">
                   <div class="input">
-                    <label for="ingredient" class="recipe-method__label">材料１</label>
-                    <input type="text" id="ingredient" class="recipe-method__input" />
+                    <label for="ingredient" class="recipe-method__label">材料２</label>
+                    <input type="text" id="ingredient" name="ingredients[]" class="recipe-method__input" />
                   </div>
                   <div class="input">
-                    <label for="quantity" class="recipe-method__label">分量１</label>
-                    <input type="text" id="quantity" class="recipe-method__input" />
+                    <label for="quantity" class="recipe-method__label">分量２</label>
+                    <input type="text" id="quantity" name="quantities[]" class="recipe-method__input" />
                   </div>
-                  <div class="recipe-method__delete">
+                  <div class="recipe-method__delete js-delete-btn">
                     <p>削除</p>
                   </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group js-recipe-method-item" id="3">
                   <div class="input">
-                    <label for="ingredient" class="recipe-method__label">材料１</label>
-                    <input type="text" id="ingredient" class="recipe-method__input" />
+                    <label for="ingredient" class="recipe-method__label">材料３</label>
+                    <input type="text" id="ingredient" name="ingredients[]" class="recipe-method__input" />
                   </div>
                   <div class="input">
-                    <label for="quantity" class="recipe-method__label">分量１</label>
-                    <input type="text" id="quantity" class="recipe-method__input" />
+                    <label for="quantity" class="recipe-method__label">分量３</label>
+                    <input type="text" id="quantity" name="quantities[]" class="recipe-method__input" />
                   </div>
-                  <div class="recipe-method__delete">
+                  <div class="recipe-method__delete js-delete-btn">
                     <p>削除</p>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="add">
+            <div class="add js-add-btn">
               <span class="add-btn">+材料・分量を追加</span>
             </div>
           </div>
