change a phrase on btn in register page correctly

--- a/src/register.html
+++ b/src/register.html
@@ -78,7 +78,7 @@
               />
               <br />
 
-              <input type="submit" value="新規登録" class="form__btn" />
+              <input type="submit" value="登録確認画面へ" class="form__btn" />
             </form>
           </div>
         </div>
