add anchor element at category btn in search block

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -106,7 +106,9 @@
               </div>
             </form>
             <p class="search__info">またはカテゴリーから探すこともできます。</p>
-            <div class="search__categories">Categories</div>
+            <div class="search__categories">
+              <a href="./category.html" class="link">Categories</a>
+            </div>
           </div>
           <div class="search__img">
             <img src="./img/bg.jpg" alt="search bg image" />
