--- a/src/html/search.html
+++ b/src/html/search.html
@@ -72,7 +72,7 @@
         <div class="search">
           <div class="search-inner">
             <h3 class="search__title main-title">レシピ検索</h3>
-            <form action="#" method="GET" class="search__form">
+            <form action="./search.html" method="GET" class="search__form">
               <div class="search__bar">
                 <input type="text" placeholder="検索" class="search__input" />
                 <button type="submit" class="search__btn">
