--- a/src/html/home.html
+++ b/src/html/home.html
@@ -152,7 +152,7 @@
           </li>
         </ul>
         <div class="mobile-menu__logo">
-          <img src="./img/logo2.png" alt="logo2 image">
+          <img src="./img/logo2.png" alt="logo2 image" onclick="location.href = './about.html'">
         </div>
         <div class="mobile-menu__sns">各種logoが入ります</div>
       </nav>
